tests/functional/cases/pass/test_create_containers.coil
test: {
  a.b.c.d: 1
}

expected: {
  a: {
    b: {
      c: {
        d: 1
      }
    }
  }
}
