tests/functional/cases/fail/test_unused_prototypes.coil
a.b.c: {
  @extends: ....b.c.d
}
